# JSONTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: app.rc  codeeditor.cpp  codeeditor.h  jsonhighlighter.cpp  jsonhighlighter.h  jsonmainwindow.cpp  jsonmainwindow.h  jsonmainwindow.ui  jsonrec.qrc  jsonwidget.cpp  jsonwidget.h  jsonwidget.ui  main.cpp  utils.cpp  utils.h
